# CMakeTemplateProject

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  ReadMe.adoc
.github/workflows/: main.yml
CMakeTemplateProject/: CMakeLists.txt
CMakeTemplateProject/include/CMakeTemplateProject/: hello.hpp  macro.hpp
CMakeTemplateProject/src/: hello.cpp
cmake/: compile_options_setter.cmake  turn_off_warning.cmake
cmake_modules/: CMakeTemplateProject-config.cmake.in  CMakeTemplateProject.pc.in  FindOpenSSL.cmake
cmake_utils/: CPM.cmake  cpm_install.cmake  doc_var.cmake  fetch_utils.cmake  nuget_install.cmake
cpm/: cpm_config.cmake
include/CMakeTemplateProject/: easy_network.hpp  hello.hpp  macro.hpp
src/: easy_network.cpp  hello.cpp
standalone_test/: CMakeLists.txt
standalone_test/src/: main.cpp
unit_test/: CMakeLists.txt
unit_test/src/: dummy_test.cpp  main.cpp  test_ctp.cpp
