cmake_minimum_required(VERSION 3.20)

set(PROJECT_NAME_PREFIX "CMakeTemplateProject_")

set(
		${PROJECT_NAME_PREFIX}MAJOR_VERSION
		0
)

set(
		${PROJECT_NAME_PREFIX}MINOR_VERSION
		0
)

set(
		${PROJECT_NAME_PREFIX}PATCH_VERSION
		1
)

set(${PROJECT_NAME_PREFIX}VERSION ${${PROJECT_NAME_PREFIX}MAJOR_VERSION}.${${PROJECT_NAME_PREFIX}MINOR_VERSION}.${${PROJECT_NAME_PREFIX}PATCH_VERSION})

project(
		CMakeTemplateProject
		VERSION ${${PROJECT_NAME_PREFIX}VERSION}
		DESCRIPTION "CMake Template Project"
		HOMEPAGE_URL "https://github.com/Life4gal/CMakeTemplateProject"
		LANGUAGES CXX
)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(${PROJECT_NAME_PREFIX}COMPILER_NAME ${CMAKE_CXX_COMPILER_ID})
set(${PROJECT_NAME_PREFIX}COMPILER_VERSION ${${PROJECT_NAME_PREFIX}COMPILER_NAME}.${CMAKE_CXX_COMPILER_VERSION})

set(${PROJECT_NAME_PREFIX}GLOBAL_SOURCE_PATH ${CMAKE_CURRENT_SOURCE_DIR})
set(${PROJECT_NAME_PREFIX}CMAKE_MODULE_PATH ${${PROJECT_NAME_PREFIX}GLOBAL_SOURCE_PATH}/cmake)
set(${PROJECT_NAME_PREFIX}CMAKE_3RDPARTY_PATH ${${PROJECT_NAME_PREFIX}GLOBAL_SOURCE_PATH}/3rd-party)

include(${${PROJECT_NAME_PREFIX}CMAKE_MODULE_PATH}/compile_options_setter.cmake)
include(${${PROJECT_NAME_PREFIX}CMAKE_MODULE_PATH}/turn_off_warning.cmake)
# CPM
include(cpm/cpm_config.cmake)
include(cpm/CPM.cmake)

add_subdirectory(${PROJECT_NAME})
enable_testing()
add_subdirectory(standalone_test)
add_subdirectory(unit_test)
